--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -35,6 +35,7 @@ switch (env) {
   >
     <a
       href={urlHome}
+      rel="prefetch"
       class="flex w-fit gap-3 rounded-full border bg-blue-200/75 p-2 hover:bg-blue-200/75 dark:border-blue-200/20 dark:bg-blue-200/50 dark:hover:border-blue-200/50 md:bg-blue-200/50 md:dark:bg-blue-200/25 xl:border-blue-200/20 xl:bg-blue-200/25"
     >
       <label class="cursor-pointer text-white">
