--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -163,9 +163,21 @@ switch (env) {
         <p
           class="flex flex-col text-sm leading-[1.1rem] text-slate-800 dark:text-slate-300/75 md:flex-col md:text-base md:leading-tight lg:text-lg lg:leading-6"
         >
-          <a href="https://www.riolly.dev/">riolly.dev</a>
-          <a href="https://github.com/riolly">&nbsp; github.com/riolly</a>
-          <a href="https://linkedin.com/in/riolly">linkedin.com/in/riolly</a>
+          <a
+            class="after:text-blue-800 after:content-['↗'] dark:after:text-blue-200"
+            href="https://www.riolly.dev/"
+            ><span class="underline">riolly.dev</span></a
+          >
+          <a
+            href="https://github.com/riolly"
+            class="after:text-blue-800 after:content-['↗'] dark:after:text-blue-200"
+            >&nbsp; <span class="underline">github.com/riolly</span></a
+          >
+          <a
+            href="https://linkedin.com/in/riolly"
+            class="after:text-blue-800 after:content-['↗'] dark:after:text-blue-200"
+            ><span class="underline"> linkedin.com/in/riolly</span></a
+          >
         </p>
       </section>
     </div>
