fix: resume link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,11 +12,26 @@ import DialogBox from "assets/dialog-box.astro";
 import SocialLink from "assets/social-link.astro";
 import StarsShine from "assets/stars-shine.astro";
 
-import { getUrl } from "utils/getUrl";
-
 import "styles/index.css";
 
-const urlResume = getUrl("/resume");
+const env = import.meta.env.VERCEL_ENV;
+let urlResume = "";
+
+switch (env) {
+  case undefined:
+  case "development":
+    urlResume = "http://localhost:3000/resume";
+    break;
+  case "preview":
+    urlResume = `https://${import.meta.env.VERCEL_URL}/resume`;
+    break;
+  case "production":
+    urlResume = `${Astro.site}/resume`;
+    break;
+
+  default:
+    break;
+}
 
 const blogPosts = await getCollection("blog", ({ data }) => data.isFeatured);
 ---
