action on number & email

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -147,11 +147,15 @@ switch (env) {
           class="flex flex-col items-end text-sm leading-[1.1rem] text-slate-800 dark:text-slate-300/75 md:text-base md:leading-tight lg:text-lg lg:leading-6"
         >
           <span class="font-body not-italic">Jakarta, Indonesia</span>
-          <span>+62 851 7432 8051 &nbsp;</span>
-          <span
-            >alberto.cahyantara@gmail<span class="hidden md:inline">.com</span
-            ></span
+
+          <a href="https://wa.me/+6285174328051"
+            ><span class="underline">+62 851 7432 8051</span> &nbsp;</a
           >
+          <a href="mailto:alberto.cahyantara@gmail">
+            <span class="underline">
+              alberto.cahyantara@gmail<span class="hidden md:inline">.com</span>
+            </span>
+          </a>
         </p>
       </section>
       <div
