--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -167,21 +167,27 @@ switch (env) {
         <p
           class="flex flex-col text-sm leading-[1.1rem] text-slate-800 dark:text-slate-300/75 md:flex-col md:text-base md:leading-tight lg:text-lg lg:leading-6"
         >
-          <a
-            class="after:text-blue-800 after:content-['↗'] dark:after:text-blue-200"
-            href="https://www.riolly.dev/"
-            ><span class="underline">riolly.dev</span></a
-          >
-          <a
-            href="https://github.com/riolly"
-            class="after:text-blue-800 after:content-['↗'] dark:after:text-blue-200"
-            >&nbsp; <span class="underline">github.com/riolly</span></a
-          >
-          <a
-            href="https://linkedin.com/in/riolly"
-            class="after:text-blue-800 after:content-['↗'] dark:after:text-blue-200"
-            ><span class="underline"> linkedin.com/in/riolly</span></a
-          >
+          <a href="https://www.riolly.dev/" class="flex gap-1">
+            <span class="underline">riolly.dev</span>
+            <img
+              src="/images/icons/arrow-up-right-from-square.svg"
+              class="w-3 text-blue-800 dark:text-blue-200"
+            />
+          </a>
+          <a href="https://github.com/riolly" class="flex gap-1">
+            &nbsp; <span class="underline">github.com/riolly</span>
+            <img
+              src="/images/icons/arrow-up-right-from-square.svg"
+              class="w-3 text-blue-800 dark:text-blue-200"
+            />
+          </a>
+          <a href="https://linkedin.com/in/riolly" class="flex gap-1">
+            <span class="underline">linkedin.com/in/riolly</span>
+            <img
+              src="/images/icons/arrow-up-right-from-square.svg"
+              class="w-3 text-blue-800 dark:text-blue-200"
+            />
+          </a>
         </p>
       </section>
     </div>
