fix: icon color

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -1,4 +1,5 @@
 ---
+import ArrowUpRightFromSquare from "components/icons/arrow-up-right-from-square.astro";
 import Layout from "layouts/MainLayout.astro";
 import img from "public/images/og-resume.jpg";
 import "styles/resume.css";
@@ -148,9 +149,9 @@ switch (env) {
         >
           <span class="font-body not-italic">Jakarta, Indonesia</span>
 
-          <a href="https://wa.me/+6285174328051"
-            ><span class="underline">+62 851 7432 8051</span> &nbsp;</a
-          >
+          <a href="https://wa.me/+6285174328051">
+            <span class="underline">+62 851 7432 8051</span> &nbsp;
+          </a>
           <a href="mailto:alberto.cahyantara@gmail">
             <span class="underline">
               alberto.cahyantara@gmail<span class="hidden md:inline">.com</span>
@@ -169,24 +170,15 @@ switch (env) {
         >
           <a href="https://www.riolly.dev/" class="flex gap-1">
             <span class="underline">riolly.dev</span>
-            <img
-              src="/images/icons/arrow-up-right-from-square.svg"
-              class="w-3 text-blue-800 dark:text-blue-200"
-            />
+            <ArrowUpRightFromSquare class="w-3" />
           </a>
           <a href="https://github.com/riolly" class="flex gap-1">
             &nbsp; <span class="underline">github.com/riolly</span>
-            <img
-              src="/images/icons/arrow-up-right-from-square.svg"
-              class="w-3 text-blue-800 dark:text-blue-200"
-            />
+            <ArrowUpRightFromSquare class="w-3" />
           </a>
           <a href="https://linkedin.com/in/riolly" class="flex gap-1">
             <span class="underline">linkedin.com/in/riolly</span>
-            <img
-              src="/images/icons/arrow-up-right-from-square.svg"
-              class="w-3 text-blue-800 dark:text-blue-200"
-            />
+            <ArrowUpRightFromSquare class="w-3" />
           </a>
         </p>
       </section>
