--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -1,4 +1,8 @@
 ---
+import {
+  CopyOrOpenEmail,
+  CopyOrOpenPhone,
+} from "components/elements/CopyOrOpenMenu";
 import ArrowUpRightFromSquare from "components/icons/arrow-up-right-from-square.astro";
 import Layout from "layouts/MainLayout.astro";
 import img from "public/images/og-resume.jpg";
@@ -144,20 +148,14 @@ switch (env) {
       class="flex justify-center gap-2 border-r-4 border-white bg-gray-400/75 px-4 pb-3 pt-2 dark:border-gray-200 dark:bg-gray-800 md:gap-4 md:border-r-2 md:pb-4 md:pt-3"
     >
       <section id="contacts" class="w-72">
-        <p
+        <div
           class="flex flex-col items-end text-sm leading-[1.1rem] text-slate-800 dark:text-slate-300/75 md:text-base md:leading-tight lg:text-lg lg:leading-6"
         >
           <span class="font-body not-italic">Jakarta, Indonesia</span>
 
-          <a href="https://wa.me/+6285174328051">
-            <span class="underline">+62 851 7432 8051</span> &nbsp;
-          </a>
-          <a href="mailto:alberto.cahyantara@gmail">
-            <span class="underline">
-              alberto.cahyantara@gmail<span class="hidden md:inline">.com</span>
-            </span>
-          </a>
-        </p>
+          <CopyOrOpenPhone client:load />
+          <CopyOrOpenEmail client:load />
+        </div>
       </section>
       <div
         class="self-center text-xs text-white dark:text-gray-900 md:text-base dark:md:text-2xl"
@@ -170,15 +168,15 @@ switch (env) {
         >
           <a href="https://www.riolly.dev/" class="flex gap-1">
             <span class="underline">riolly.dev</span>
-            <ArrowUpRightFromSquare class="w-3" />
+            <ArrowUpRightFromSquare class="w-2.5 md:w-3" />
           </a>
           <a href="https://github.com/riolly" class="flex gap-1">
             &nbsp; <span class="underline">github.com/riolly</span>
-            <ArrowUpRightFromSquare class="w-3" />
+            <ArrowUpRightFromSquare class="w-2.5 md:w-3" />
           </a>
           <a href="https://linkedin.com/in/riolly" class="flex gap-1">
             <span class="underline">linkedin.com/in/riolly</span>
-            <ArrowUpRightFromSquare class="w-3" />
+            <ArrowUpRightFromSquare class="w-2.5 md:w-3" />
           </a>
         </p>
       </section>
