remove underline on social links

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -167,15 +167,15 @@ switch (env) {
           class="flex flex-col text-sm leading-[1.1rem] text-slate-800 dark:text-slate-300/75 md:flex-col md:text-base md:leading-tight lg:text-lg lg:leading-6"
         >
           <a href="https://www.riolly.dev/" class="flex gap-1">
-            <span class="underline">riolly.dev</span>
+            <span>riolly.dev</span>
             <ArrowUpRightFromSquare class="w-2.5 md:w-3" />
           </a>
-          <a href="https://github.com/riolly" class="flex gap-1">
-            &nbsp; <span class="underline">github.com/riolly</span>
+          <a href="https://github.com/riolly" class="ml-2 flex gap-1">
+            <span>github.com/riolly</span>
             <ArrowUpRightFromSquare class="w-2.5 md:w-3" />
           </a>
           <a href="https://linkedin.com/in/riolly" class="flex gap-1">
-            <span class="underline">linkedin.com/in/riolly</span>
+            <span>linkedin.com/in/riolly</span>
             <ArrowUpRightFromSquare class="w-2.5 md:w-3" />
           </a>
         </p>
