fix: "ready" change position w/ translate

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -94,7 +94,7 @@ const blogPosts = await getCollection("blog", ({ data }) => data.isFeatured);
               class="rotateInDownRight absolute h-full origin-bottom-right"
             />
             <div
-              class="absolute left-4 top-1 w-24 -rotate-2 group-hover:top-4 md:left-5 md:top-1.5 md:group-hover:top-5"
+              class="absolute left-4 top-1 w-24 -rotate-2 group-hover:translate-y-3 md:left-5 md:top-1.5 md:group-hover:translate-y-4"
             >
               <p class="text-bold font-head text-2xl leading-5">
                 <span
