change invisible to opacity

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -99,7 +99,7 @@ const blogPosts = await getCollection("blog", ({ data }) => data.isFeatured);
               <p class="text-bold font-head text-2xl leading-5">
                 <span
                   style="--n:22"
-                  class={`typing_dialog text-black before:text-3xl group-hover:invisible before:visible before:text-black before:group-hover:content-["Ready??"] before:group-focus:content-["Let's_GO!_"]`}
+                  class={`typing_dialog text-black before:text-3xl group-hover:opacity-0 before:visible before:text-black before:group-hover:content-["Ready??"] before:group-focus:content-["Let's_GO!_"]`}
                   >Right here, hop on!!</span
                 >
               </p>
