--- a/src/components/HeadCommon.astro
+++ b/src/components/HeadCommon.astro
@@ -5,6 +5,6 @@
 
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <link rel="alternate icon" type="image/x-icon" href="/favicon.svg" />
-<!-- <link rel="sitemap" href="/sitemap.xml" /> -->
+<link rel="sitemap" href="/sitemap.xml" />
 
 <!-- <script defer src="/_vercel/insights/script.js"></script> -->
