style: shrink max-w

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -104,7 +104,7 @@ import "styles/resume.css";
 
   <div
     id="resume"
-    class="mx-auto max-w-screen-xl bg-gray-100 shadow-xl shadow-gray-200 dark:bg-gray-900 dark:shadow-slate-700"
+      class="mx-auto max-w-[1180px] bg-gray-100 shadow-xl shadow-gray-200 dark:bg-gray-900 dark:shadow-slate-700"
   >
     <section
       id="header"
