--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,8 +18,8 @@ const blogPosts = await getCollection("blog", ({ data }) => data.isFeatured);
 ---
 
 <Layout
-  title="Welcome to Riolly Universe"
-  description="Explore web development universe with Alberto Riolly and take your dev skill to the moon."
+  title="Explore the Web Development Universe with Riolly"
+  description="Unlock the true potential of web development with Riolly. From infrastructure to database management, from back-end solutions to front-end techniques, the cutting-edge tech stack that designed to elevate the user experience. Stay ahead of the curve and embark on a transformative journey into the ever-evolving world of web development with Riolly."
 >
   <div class="absolute h-fit w-full overflow-clip">
     <StarsBg />
