--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -62,6 +62,7 @@ const blogPosts = await getCollection("blog", ({ data }) => data.isFeatured);
 
       <button
         id="astronaut-wrap"
+        aria-label="Explore articles"
         class="init group absolute -bottom-8 right-0 z-10 pl-24 pt-16 transition-transform hover:cursor-pointer md:mb-8 md:mr-12 lg:mr-8 xl:mr-16 2xl:mr-20"
       >
         <div id="astronaut" class="init">
@@ -155,10 +156,13 @@ const blogPosts = await getCollection("blog", ({ data }) => data.isFeatured);
       <div
         class="mx-auto flex max-w-screen-md flex-col items-center px-4 md:px-8 lg:px-0"
       >
-        <img
-          src="/images/blog-stars.svg"
-          class="-z-10 my-8 h-40 w-auto lg:h-auto"
-        />
+        <h2>
+          <img
+            src="/images/blog-stars.svg"
+            class="-z-10 my-8 h-40 w-auto lg:h-auto"
+            alt="blog post"
+          />
+        </h2>
 
         <div class="relative space-y-6 px-6">
           {
