--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -128,11 +128,11 @@ import "styles/resume.css";
 
       <div
         id="sub-header"
-        class="flex justify-center gap-2 border-r-4 border-white bg-gray-400/75 px-4 pb-3 pt-2 dark:border-gray-200 dark:bg-gray-800 md:gap-4 md:border-r-2 md:pb-4 md:pt-3"
+        class="flex justify-center gap-2 border-r-4 border-white bg-gray-400/75 px-4 py-3 dark:border-gray-200 dark:bg-gray-800 md:gap-4 md:border-r-2 md:pb-4 md:pt-3"
       >
         <section id="contacts" class="w-72">
           <div
-            class="flex flex-col items-end text-sm leading-[1.1rem] text-slate-800 dark:text-slate-300/75 md:text-base md:leading-tight lg:text-lg lg:leading-6"
+            class="flex flex-col items-end gap-3 text-sm leading-[1.1rem] text-slate-800 dark:text-slate-300/75 md:gap-2 md:text-base md:leading-tight lg:text-lg lg:leading-6"
           >
             <span class="font-body not-italic">Jakarta, Indonesia</span>
 
@@ -141,13 +141,13 @@ import "styles/resume.css";
           </div>
         </section>
         <div
-          class="self-center text-xs text-white dark:text-gray-900 md:text-base dark:md:text-2xl"
+          class="self-center text-sm text-white dark:text-gray-900 md:text-base dark:md:text-2xl"
         >
           &#9679;
         </div>
         <section id="socials" class="w-72 font-body">
           <p
-            class="flex flex-col text-sm leading-[1.1rem] text-slate-800 dark:text-slate-300/75 md:flex-col md:text-base md:leading-tight lg:text-lg lg:leading-6"
+            class="flex flex-col gap-3 text-sm leading-[1.1rem] text-slate-800 dark:text-slate-300/75 md:flex-col md:gap-2 md:text-base md:leading-tight lg:text-lg lg:leading-6"
           >
             <a href="https://www.riolly.dev/" class="flex gap-1">
               <span>riolly.dev</span>
