--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -112,7 +112,7 @@ import "styles/resume.css";
     >
       <section
         id="header"
-        class="space-y-2 border-r-[12px] border-white bg-gray-300 px-2 pb-4 pt-8 dark:border-gray-200 dark:bg-gray-600 md:space-y-4 md:border-r-8"
+        class="space-y-2 border-r-[12px] border-white bg-gray-300 px-2 pb-2 pt-8 dark:border-gray-200 dark:bg-gray-600 md:space-y-4 md:border-r-8 lg:pb-4"
       >
         <h1
           class="space text-center font-head text-5xl dark:text-white md:text-6xl lg:tracking-wide"
@@ -120,9 +120,9 @@ import "styles/resume.css";
           Alberto R Cahyantara
         </h1>
         <h2
-          class="text-center font-body text-xl text-blue-950 dark:text-gray-100 md:text-2xl"
+          class="text-center font-body text-2xl text-blue-950 dark:text-gray-100 md:text-3xl"
         >
-          Front-end / Full-stack Developer
+          Front-end / Full-stack<br class="md:hidden" /> Developer
         </h2>
       </section>
 
