chore: move component from asset

--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "./MainLayout.astro";
 
-import StarsBg from "components/StarsBg.astro";
+import StarsBg from "components/ornaments/bg-stars.astro";
 
 export type Props = {
   title: string;
