--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,14 +3,13 @@ import { getCollection } from "astro:content";
 import { Picture } from "@astrojs/image/components";
 
 import Layout from "layouts/MainLayout.astro";
-import StarsBg from "components/StarsBg.astro";
-
-import EarthSvg from "assets/earth.astro";
-import RocketAstronaut from "assets/rocket-astronaut.astro";
-import PlanetLandscape from "assets/landscape.astro";
-import DialogBox from "assets/dialog-box.astro";
-import SocialLink from "assets/social-link.astro";
-import StarsShine from "assets/stars-shine.astro";
+import StarsBg from "components/ornaments/bg-stars.astro";
+import EarthSvg from "components/ornaments/earth.astro";
+import RocketAstronaut from "components/ornaments/rocket-astronaut.astro";
+import PlanetLandscape from "components/ornaments/landscape.astro";
+import DialogBox from "components/ornaments/dialog-box.astro";
+import SocialLink from "components/ornaments/social-link.astro";
+import StarsShine from "components/ornaments/stars-shine.astro";
 
 import "styles/index.css";
 
