--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "layouts/MainLayout.astro";
-import StarsBg from "components/StarsBg.astro";
+import StarsBg from "components/ornaments/bg-stars.astro";
 import {
   CopyOrOpenEmail,
   CopyOrOpenPhone,
@@ -14,7 +14,7 @@ import "styles/resume.css";
 <Layout
   title="Alberto Riolly Cahyantara's Resume"
   description="Self-learned, always evolving, front-end/ full-stack developer focused to create engaging and intuitive software."
-  image={img}
+  image={img.src}
   siteTitle="Resume"
 >
   <div class="absolute h-fit w-full overflow-clip">
