--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -7,14 +7,14 @@ import {
 } from "components/elements/CopyOrOpenMenu";
 import ArrowUpRightFromSquare from "components/icons/arrow-up-right-from-square.astro";
 
-import img from "public/images/og-resume.jpg";
+import og from "assets/images/og-resume.jpg";
 import "styles/resume.css";
 ---
 
 <Layout
   title="Alberto Riolly Cahyantara's Resume"
   description="Self-learned, always evolving, front-end/ full-stack developer focused to create engaging and intuitive software."
-  image={img.src}
+  image={og.src}
   siteTitle="Resume"
 >
   <div class="absolute h-fit w-full overflow-clip">
