--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -15,29 +15,20 @@ export async function getStaticPaths() {
 }
 
 const {
-  entry,
-  entry: {
-    data,
-    data: { image },
-  },
+  entry: { data, render },
 } = Astro.props;
-const { Content } = await entry.render();
+const { Content } = await render();
 ---
 
-<BlogLayout
-  title={data.title}
-  description={data.description}
-  siteTitle={data.siteTitle}
-  image={image.og.src}
->
+<BlogLayout frontmatter={data}>
   <Image
-    src={image.banner}
-    alt={image.alt}
+    src={data.image.banner}
+    alt={data.image.alt}
     loading="eager"
     class="mb-[45vw] origin-top scale-[2] shadow-bottom shadow-slate-950 sm:mb-8 sm:scale-100"
   />
 
-  <h1 class="px-4 text-center md:px-8 lg:px-16">{entry.data.title}</h1>
+  <h1 class="px-4 text-center md:px-8 lg:px-16">{data.title}</h1>
   <div class="mx-auto max-w-screen-md px-6 md:px-16 lg:px-0">
     <Content />
   </div>
