fix: env imported from meta

--- a/src/components/HeadSeo.astro
+++ b/src/components/HeadSeo.astro
@@ -4,6 +4,9 @@ import { SITE, OPEN_GRAPH } from "../config";
 import type { SeoProps } from "../config";
 export interface Props extends SeoProps {}
 
+const env = import.meta.env.VERCEL_ENV;
+const vercelUrl = import.meta.env.VERCEL_URL;
+
 const { frontmatter, title, description, type, image } = Astro.props;
 const meta = {
   canonicalUrl: new URL(Astro.url.pathname, Astro.site),
@@ -14,9 +17,7 @@ const meta = {
   image: {
     src: new URL(
       frontmatter?.image.og.src ?? image?.src ?? OPEN_GRAPH.image.src,
-      process.env.VERCEL_ENV === "preview"
-        ? import.meta.env.VERCEL_URL
-        : Astro.url.origin,
+      env === "preview" ? vercelUrl : Astro.url.origin,
     ),
     alt: frontmatter?.image.alt ?? image?.alt ?? OPEN_GRAPH.image.alt,
   },
