--- a/src/components/HeadSeo.astro
+++ b/src/components/HeadSeo.astro
@@ -4,6 +4,7 @@ import { SITE, OPEN_GRAPH } from "../config";
 import type { SeoProps } from "../config";
 export interface Props extends SeoProps {}
 
+console.log(import.meta.env);
 const env = import.meta.env.VERCEL_ENV;
 const vercelUrl = import.meta.env.VERCEL_URL;
 
