fix: missing $ on template literal

--- a/src/components/HeadSeo.astro
+++ b/src/components/HeadSeo.astro
@@ -5,7 +5,7 @@ import type { SeoProps } from "../config";
 export interface Props extends SeoProps {}
 
 const env = import.meta.env.VERCEL_ENV;
-const vercelUrl = `https://{import.meta.env.VERCEL_URL}`;
+const vercelUrl = `https://${import.meta.env.VERCEL_URL}`;
 
 const { frontmatter, title, description, type, image } = Astro.props;
 const meta = {
