chore: format import order

--- a/src/components/HeadSeo.astro
+++ b/src/components/HeadSeo.astro
@@ -1,7 +1,8 @@
 ---
-import { SITE, OPEN_GRAPH } from "../config";
+import { OPEN_GRAPH, SITE } from "../config";
 
 import type { SeoProps } from "../config";
+
 export interface Props extends SeoProps {}
 
 const env = import.meta.env.VERCEL_ENV;
