--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -2,6 +2,8 @@
 import { Image } from "astro:assets";
 import { getCollection } from "astro:content";
 
+import { getPlaiceholder } from "plaiceholder";
+
 import BlogLayout from "layouts/BlogLayout.astro";
 
 import type { InferGetStaticPropsType } from "astro";
@@ -15,20 +17,34 @@ export async function getStaticPaths() {
     props: { entry },
   }));
 }
-
 const {
   entry: { data, render },
 } = Astro.props;
 const { Content } = await render();
+
+const imgSrc = new URL(data.image.banner.src, Astro.url.origin);
+const buffer = await fetch(imgSrc).then(async (res) =>
+  Buffer.from(await res.arrayBuffer()),
+);
+const { css } = await getPlaiceholder(buffer, { size: 10 });
 ---
 
 <BlogLayout frontmatter={data}>
-  <Image
-    src={data.image.banner}
-    alt={data.image.alt}
-    loading="eager"
-    class="mb-[45vw] origin-top scale-[2] shadow-bottom shadow-slate-950 sm:mb-8 sm:scale-100"
-  />
+  <div
+    class="relative mb-[45vw] block aspect-[5/2] origin-top scale-[2] overflow-hidden shadow-bottom shadow-slate-950 sm:mb-8 sm:scale-100"
+  >
+    <div
+      style={css}
+      class="absolute inset-0 h-full w-full scale-150 transform blur-xl"
+    >
+    </div>
+    <Image
+      src={data.image.banner}
+      alt={data.image.alt}
+      loading="eager"
+      class="relative"
+    />
+  </div>
 
   <h1 class="px-4 text-center md:px-8 lg:px-16">{data.title}</h1>
   <div class="mx-auto max-w-screen-md px-6 md:px-16 lg:px-0">
