wip: image complete load transition

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -42,7 +42,7 @@ const { css } = await getPlaiceholder(buffer, { size: 10 });
       src={data.image.banner}
       alt={data.image.alt}
       loading="eager"
-      class="relative"
+      class="relative animate-in fade-in-0 zoom-in-110 duration-700"
     />
   </div>
 
